--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
         </address>
       </div>
     </header>
+    <div class="backdrop">
+      <div class="modal">
+        <button type="button" class= "modal-close-btn">
+          <svg class="modal-close-icon"></svg>
+          <use></use>
+        </button>
+      </div>
+    </div>
     <main>
       <section class="section-button">
         <div class="container">
