--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </button>
       <p class="modal-p">Leave your contacts and we will call you back</p>
       <div class="div-label">
-        <form>
+        <form class="label-container">
           <label class="label" for="user-name">Name</label>
           <div class="div-input">
             <input class="input" type="text" name="user-name" id="user-name" />
