--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@
         <ul class="portfolio">
           <li class="portfolio-li">
             <div class="pictures-portfolio">
-              <img class="portfolio-img" src="./images/banking.jpg" alt="banking" width="360" height="300"
-                class="portfolio-tittle" />
+              <img class="portfolio-img" src="./images/banking.jpg" alt="banking" width="360" height="300" />
               <p class="textport">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -417,7 +416,7 @@
   <div class="backdrop is-open">
     <div class="modal">
       <button type="button" class="modal-close-btn">
-        <svg class="modal-close-icon" wight="8" height="8">
+        <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close-black-18dp-2-1-1-1"></use>
         </svg>
       </button>
